BFA-971 - Fixing Alignment Issues of value prop on Insurance Section - Fixing Alignment Issues of Customer Reviews Header Image on Mobile
BFA-972
- Implementing Differing Environment Variables for Google Analytics Property IDs

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -295,6 +295,12 @@ body{
                     img{
                         height:80px;
                     }
+                    br{
+                        @include minMobilemaxPhablet{
+                            display:none;
+                        }
+                    }
+                    
                     p{
                         font-family:$muli-bold;
                         color:$dark-orange-color;
